# gustavofranke.github.io

./: .gitignore  README.md  about.html  about.rst  archive.html  contact.html  contact.markdown  gustavofranke-github-io.cabal  index.html  stack.yaml
css/: default.css
docs/: about.html  archive.html  contact.html  index.html
docs/posts/: 2020-11-20-my-journey-into-haskell.html  2020-11-22-first-post.html  2020-12-01-my-journey-into-haskell.html
posts/: 2020-11-20-my-journey-into-haskell.markdown  2020-11-22-first-post.html  2020-11-22-first-post.markdown  2020-12-01-my-journey-into-haskell.markdown
src/: Main.hs
templates/: default.html
